TAB-7730: Java 11
svn path=/dso/trunk/; revision=27879